micurs/scene-graph (#12)
# Canvas demo: Adds structure, scene rendering, & grid improvements.

This commit introduces a basic canvas demo structure with scene rendering capabilities.
It also includes improvements to grid step calculations and adds a position callback to track center point and zoom level changes.

## Changes

* HTML Structure: Modified index.html to include divs for canvas, command panel, zoom panel and an app bar for potential controls. Canvas is now within
* Scene Building: Added src/buildScene.ts to create a sample scene with rays originating from random points and directions.
* Scene Rendering: Added src/ts-geopro-canvas/render.ts to encapsulate scene rendering logic, allowing for different renderable entity types (points, rays, frames).
* Dependency Updates: Removed typescript and vite from apps/canvas-demo/package.json, assuming they are now managed at the workspace root.
* Grid Improvement: Refactored grid step calculation in src/ts-geopro-canvas/perfect-grid.ts using gridSteps variable.
* Position Callback: Added an optional position callback to src/ts-geopro-canvas/init.ts to track and display the center point and zoom level.
* Event Listener: Added pointer events listener on canvas to support modern mouse and touch interactions.

## Impact

* Behavioral changes: Introduction of scene rendering, zoom level display, and a more interactive panning/zooming experience through the use of pointer events
* Dependencies affected: The demo now depends on the buildScene and renderScene modules.  @micurs/ts-geopro dependency remains but typescript and vite dependencies for canvas-demo app moved to the root.
* Performance implications: The addition of scene rendering might have performance implications depending on the complexity and number of entities being rendered.

Co-authored-by: Michele Ursino <michele@micurs.com>
Reviewed-on: http://gitea.micurs.com/micurs/ts-geopro/pulls/12

--- a/apps/canvas-demo/src/style.css
+++ b/apps/canvas-demo/src/style.css
@@ -11,6 +11,12 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --app-border: 5px;
+  --app-bgcolor: #a0a032;
+  --app-grid-sep: 16px;
+  --panel-corner-radius: 5px;
+  --panel-border-color: rgba(255, 255, 255, 0.2);
 }
 
 a {
@@ -24,10 +30,15 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  border: none;
+  display: flex;
+  align-items: stretch;
+  justify-content: stretch;
+  overflow: hidden;
+  background-color: var(--app-bgcolor);
 }
 
 h1 {
@@ -36,33 +47,88 @@ h1 {
 }
 
 #app {
-  width: 100vw;
-  height: 100vh;
-  margin: 0 auto;
-  text-align: center;
+  width: calc(100vw - var(--app-border) * 2);
+  height: calc(100vh - var(--app-border) * 2);
   overflow: hidden;
-  display: flex;
-  background-color: blue;
-  align-items: stretch;
+  display: grid;
+  justify-items: stretch;
+  column-gap: var(--app-grid-sep);
+  row-gap: calc(var(--app-grid-sep) / 1);
+  grid-template-columns: 0px 220px auto 220px 0px;
+  grid-template-rows: 0px 50px auto 50px 0px;
+  border: solid var(--app-border) var(--app-bgcolor);
+  border-radius: max(11px, calc(var(--app-border) * 3));
 }
 
-#app-canvas {
-  /* width: calc(100vw - 2px);
-  height: calc(100vh- 2px); */
-  border: solid 1px #213547;
-  flex-grow: 1;
-  flex-shrink: 1;
-  background-color: #242424;
-  border: solid 1px transparent;
-  min-width: 100px;
-  min-height: none;
+#app-canvas-2d {
+  background-color: red;
+  grid-column: 1 / span 5;
+  grid-row: 1 / span 5;
+  overflow: hidden;
+}
+
+.overlay-panel {
+  background-color: rgba(40, 40, 40, 0.4);
+  backdrop-filter: grayscale(80%) blur(2px);
+  border-radius: var(--panel-body-corner-radius);
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.8);
+  border: solid 1px var(--panel-border-color);
 }
 
 #app-cmd {
-  width: 120px;
-  min-width: 120px;
-  max-width: 120px;
-  background-color: #323232;
+  grid-column: 2 / span 1;
+  grid-row: 3 / span 1;
+  /* max-height: 600px; */
+  transition: height 0.5s ease-out;
+}
+
+#app-zoom {
+  grid-column: 2 / span 1;
+  grid-row: 4 / span 1;
+  height: 40px;
+  width: 100%;
+  place-self: center;
+  line-height: 1.5;
+  overflow: hidden;
+  text-align: center;
+  font-size: 12px;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+
+#app-bar {
+  grid-column: 3 / span 1;
+  grid-row: 2 / span 1;
+  width: 400px;
+  height: 40px;
+  place-self: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  padding: 1px;
+}
+
+#app-bar > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: calc(4px + var(--panel-corner-radius));
+  width: 40px;
+  height: 40px;
+  margin-right: 2px;
+  cursor: pointer;
+  transition: background-color 0.4s ease-in-out;
+}
+
+#app-bar > div:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+#app-canvas {
+  border: solid 1px #213547;
+  background-color: #242424;
+  border: solid 1px transparent;
 }
 
 @media (prefers-color-scheme: light) {
