Improves projection demo visuals and fixes scaling
Enhances the projection demo with visual tweaks, including adjusted polygon colors and border aesthetics.

Addresses a scaling issue by ensuring device pixel ratio is correctly calculated and applied during canvas resizing, which ensures correct sharpness on different displays.

Adds a new `dev:p` script for the projection demo.

--- a/apps/projection-demo/src/style.css
+++ b/apps/projection-demo/src/style.css
@@ -25,6 +25,6 @@ body {
   width: calc(100vw - 4px);
   height: calc(100vh - 4px);
   background-color: #1a1a1a;
-  border: solid 2px rgba(120, 40, 40, 0.8);
-  border-radius: 15px;
+  border: solid 2px rgba(220, 240, 240, 0.8);
+  border-radius: 0px 0px 19px 19px;
 }
